crates/reinhardt-core/crates/macros/tests/ui/field_attributes/fail/generated_without_storage_spec.stderr
error: Generated columns must specify either generated_stored=true or generated_virtual=true
 --> tests/ui/field_attributes/fail/generated_without_storage_spec.rs:3:1
  |
3 | #[model(app_label = "test", table_name = "users")]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the derive macro `reinhardt::Model` (in Nightly builds, run with -Z macro-backtrace for more info)
